<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AudioActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center|center_horizontal"
        android:contentDescription="@string/vaca"
        android:onClick="soundCow"
        app:srcCompat="@drawable/vaca" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/toque_na_imagem_do_animal" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center|center_horizontal"
        android:contentDescription="@string/cachorro"
        android:onClick="soundDog"
        app:srcCompat="@drawable/cachorro" />
</LinearLayout>